--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         <activity
             android:name="aterbo.MemoryBite.InputMeal"
             android:label="@string/title_activity_input_meal"
-            android:hardwareAccelerated="true"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            android:hardwareAccelerated="true">
         </activity>
         <activity
             android:name="aterbo.MemoryBite.OpenScreen"
