DRASTIC CHANGE CAUSE I DIDN'T THINK IT'D WORK:   * Changed to PagerView between images   * Implimented custom TouchImageView to allow pinch zoom and panning for photos    * Made custom image view programming using UIL and TouchImageView instead of passing intent to gallery    * Changed DBHelper to pass ArrayList of photos not just list so that I could pass a parcelable through the activities from MealDetails to the All New Full Screen View    * Hope I didn't inadvertantly break anything.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="aterbo.MemoryBite.ListOfMeals" />
         </activity>
+        <activity
+            android:name="aterbo.MemoryBite.FullScreenViewActivity"
+            android:theme="@style/AppTheme.NoActionBar.FullScreen">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="aterbo.MemoryBite.MealDetails" />
+        </activity>
     </application>
 
 </manifest>
