--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
     compile files('libs/universal-image-loader-1.9.4.jar')
     compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile files('libs/opencsv-3.6.jar')
 }
