Second PDF page set up. Now puts all on second page if no space on front or if 3-4 pictures and pictures 3-6 on second page if 5 or 6 pictures. Also undid noHistory for enter.. was causing errors with adding photos.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         <activity
             android:name="aterbo.MemoryBite.InputMeal"
             android:label="@string/title_activity_input_meal"
-            android:hardwareAccelerated="true"
-            android:noHistory="true">
+            android:hardwareAccelerated="true">
         </activity>
         <activity
             android:name="aterbo.MemoryBite.OpenScreen"
