--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,13 @@ android {
             applicationIdSuffix ".debug"
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -28,7 +35,7 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.0'
     compile files('libs/universal-image-loader-1.9.4.jar')
     compile 'com.google.android.gms:play-services-ads:9.0.0'
-    compile files('libs/opencsv-3.6.jar')
+    compile 'com.opencsv:opencsv:3.8'
 }
 
 apply plugin: 'com.google.gms.google-services'
